--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -170,18 +170,15 @@ config TARGET_M28EVK
 
 config TARGET_MX23EVK
 	bool "Support mx23evk"
-	select CPU_ARM926EJS
-	select SUPPORT_SPL
+	select MXS
 
 config TARGET_MX28EVK
 	bool "Support mx28evk"
-	select CPU_ARM926EJS
-	select SUPPORT_SPL
+	select MXS
 
 config TARGET_MX23_OLINUXINO
 	bool "Support mx23_olinuxino"
-	select CPU_ARM926EJS
-	select SUPPORT_SPL
+	select MXS
 
 config TARGET_BG0900
 	bool "Support bg0900"
@@ -868,6 +865,8 @@ source "arch/arm/cpu/armv7/Kconfig"
 source "arch/arm/cpu/armv8/Kconfig"
 
 source "arch/arm/imx-common/Kconfig"
+
+source "arch/arm/cpu/arm926ejs/mxs/Kconfig"
 
 source "board/aristainetos/Kconfig"
 source "board/BuR/kwb/Kconfig"
