--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -180,6 +180,10 @@ config TARGET_MX23_OLINUXINO
 	bool "Support mx23_olinuxino"
 	select MXS
 
+config TARGET_MX23_WIRENBOARD
+	bool "Support mx23_wirenboard"
+	select MXS
+
 config TARGET_BG0900
 	bool "Support bg0900"
 	select CPU_ARM926EJS
@@ -936,6 +940,7 @@ source "board/logicpd/imx31_litekit/Kconfig"
 source "board/maxbcm/Kconfig"
 source "board/mpl/vcma9/Kconfig"
 source "board/olimex/mx23_olinuxino/Kconfig"
+source "board/contactless/mx23_wirenboard/Kconfig"
 source "board/palmld/Kconfig"
 source "board/palmtc/Kconfig"
 source "board/palmtreo680/Kconfig"
