--- a/configs/mx23_wirenboard_defconfig
+++ b/configs/mx23_wirenboard_defconfig
@@ -8,3 +8,5 @@ CONFIG_FIT_SIGNATURE=y
 # CONFIG_CMD_FLASH is not set
 # CONFIG_CMD_SETEXPR is not set
 CONFIG_DM=y
+CONFIG_SYS_EXTRA_OPTIONS="SPL_MXS_DDR_LOWPWR SPL_MXS_DDR_CL25"
+
